elixir/force-app/main/default/objects/genesis__Policy_Exception__c/genesis__Policy_Exception__c.object-meta.xml
<CustomObject>
    <label>Policy Condition</label>
    <nameField>
        <displayFormat>PE-{0000000}</displayFormat>
        <label>Policy Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>