elixir/force-app/main/default/objects/genesis__Policy_Exception__c/fields/Description1__c.field-meta.xml
<CustomField>
    <fullName>Description1__c</fullName>
    <label>Description1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>