elixir/force-app/main/default/objects/genesis__Policy_Exception__c/fields/genesis__Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>genesis__Condition_Type__c</fullName>
    <label>Condition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Independent Financial Advice</fullName>
            </value>
            <value>
                <fullName>Independent Legal Advice</fullName>
            </value>
            <value>
                <fullName>Interpreters Certificate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
                <isActive>false</isActive>
                <label>Data</label>
            </value>
            <value>
                <fullName>Document</fullName>
                <isActive>false</isActive>
                <label>Document</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>