elixir/force-app/main/default/objects/genesis__Policy_Exception__c/fields/genesis__Description__c.field-meta.xml
<CustomField>
    <fullName>genesis__Description__c</fullName>
    <formula>genesis__Policy_Exception_Definition__r.genesis__Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>