elixir/force-app/main/default/objects/genesis__Policy_Exception__c/fields/genesis__Officer_Comments__c.field-meta.xml
<CustomField>
    <fullName>genesis__Officer_Comments__c</fullName>
    <label>Officer Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>