elixir/force-app/main/default/objects/genesis__Policy_Exception__c/fields/genesis__Policy_Exception_Definition__c.field-meta.xml
<CustomField>
    <fullName>genesis__Policy_Exception_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Condition Definition</label>
    <referenceTo>genesis__Policy_Exception_Definition__c</referenceTo>
    <relationshipLabel>Policy Conditions</relationshipLabel>
    <relationshipName>Policy_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>