elixir/force-app/main/default/objects/genesis__Policy_Exception__c/fields/Party__c.field-meta.xml
<CustomField>
    <fullName>Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party</label>
    <referenceTo>clcommon__Party__c</referenceTo>
    <relationshipLabel>Policy Conditions</relationshipLabel>
    <relationshipName>Policy_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>