elixir/force-app/main/default/objects/genesis__Policy_Exception__c/fields/Waiver_Reason__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Reason__c</fullName>
    <label>Waiver Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>